--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,9 @@
     <body class="{{ .Site.Params.themeColor }} {{if .Site.Params.layoutReverse}}layout-reverse{{end}}">
     {{ partial "sidebar.html" . }}
         <div class="content container">
+            {{ partial "navigation.html" . }}
             {{ block "content" . }}{{ end }}
+            {{ partial "sidebar/copyright.html" . }}
         </div>
         {{ block "footer" . }}{{ end }}
     </body>
