--- a/assets/scss/hyde-hyde/_variables.scss
+++ b/assets/scss/hyde-hyde/_variables.scss
@@ -17,6 +17,8 @@ $green: #90a959;
 $cyan: #75b5aa;
 $blue: #268bd2;
 $brown: #8f5536;
+$lavendar: #D0D4F1;
+$magenta: #FF6365;
 
 //https://www.client9.com/css-system-font-stack-sans-serif-v3
 $root-font-family: "IBM Plex Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Droid Sans", "Ubuntu", "Helvetica Neue", Helvetica, Arial, sans-serif, "Apple Color Emoji","Segoe UI Emoji", "Segoe UI Symbol";
@@ -52,7 +54,7 @@ $code-fence-font-size: .8rem;
 $code-line-height: 1.4;
 
 // links
-$link-color: $blue;
+$link-color: $gray-7;
 $link-hover-color: $body-color;
 
 // section
@@ -100,7 +102,7 @@ $content-margin-left: $sidebar-width + 2rem;
 $content-margin-right: 2rem;
 
 // navigation
-$navigation-color: #c2255c;
+$navigation-color: $gray-6;
 
 // portfolio
 $project__title-font-size: $h2-font-size;
