--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,44 +1,36 @@
 {{ define "header" }}
-  {{ partial "header.html" . }}
+    {{ partial "header.html" . }}
 {{ end }}
 
 {{ define "content" }}
-  <div class="post-list">
-    {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" site.Params.mainSections) }}
-    {{ range $paginator.Pages }}
-      {{ if .Draft }}
-        {{ .Scratch.Set "draftPage" true }}
-      {{ else }}
-        {{ .Scratch.Set "draftPage" false }}
-      {{ end }}
-      <div class="post-list__item">
-        <span class="item__title--big">
-          <a href="{{ .RelPermalink }}" {{if .Scratch.Get "draftPage" }}class="draft"{{end}}>{{ .Title }}</a>
-        </span>
-        <span class="item__date">
-          {{ .Date.Format (.Site.Params.dateformat | default "Jan 02, 2006") }}
-        </span>
-        <span {{if .Scratch.Get "draftPage" }}class="draft"{{end}}>
-        {{ if .Description }}
-        {{ .Description }}
-        {{ else }}
-        {{ .Summary }}
-        {{ end }}
-        </span>
-        {{ if .Truncated }}
-          ... <a class="read-more-symbol" href="{{ .RelPermalink }}">➦</a>
-        {{ end }}
-        </div>
-        {{ .Scratch.Delete "draftPage" }}
-     {{ end }}
-  </div>
-  {{ partial "pagination.html" . }}
+<div class="section__title">The Latest</div>
+  {{ range first 1 (where .Site.RegularPages "Section" "apps") }}
+  <section class="portfolio__featured-project">
+      <div class="section-inner">
+          <div class="portfolio_content">
+              <div class="item featured text-center">
+                  <span class="project__title">
+                      <a href="{{ .Params.Link }}" target="_blank" rel="noopener noreferrer">{{ .Title }}</a>
+                  </span>
+                  <p class="project__subtitle-big">
+                      <sup><i class="fa fa-quote-left" aria-hidden="true"></i></sup>
+                      {{ .Params.description }}
+                      <sup><i class="fa fa-quote-right" aria-hidden="true"></i></sup>
+                  </p>
+                  <div class="project__featured-image">
+                      <img src="/apps/{{ .Params.screenshot }}"  alt="{{ .Title }}">
+                  </div>
+                  <div class="project__summary">
+                          {{ .Content }}
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  <hr class="divider">
+  {{ end }}
 {{ end }}
 
 {{ define "footer" }}
-  {{ if .Site.GoogleAnalytics }}
-    <!-- Google Analytics -->
-    {{ template "_internal/google_analytics_async.html" . }}
-  {{ end }}
-  {{ partial "footer/font-awesome-js.html" . }}
+    {{ partial "portfolio/footer.html" . }}
 {{ end }}
