--- a/layouts/partials/portfolio/content.html
+++ b/layouts/partials/portfolio/content.html
@@ -1,4 +1,4 @@
-<span class="section__title">{{ .Title | default "Projects" }}</span>
+<div class="section__title">{{ .Title | default "Projects" }}</div>
 <div class="portfolio__content">
     {{ range first 1 (where .Data.Pages "Params.featured" "==" true) }}
         <section class="portfolio__featured-project">
@@ -23,10 +23,10 @@
                 </div>
             </div>
         </section>
+        <hr class="divider">
     {{ end }}
     <section>
         <div class="portfolio_content">
-            <hr class="divider">
             {{ range (where .Data.Pages "Params.featured" "!=" true).ByDate.Reverse }}
             <div class="row">
                 <div class="col-md-4 col-sm-4 col-xs-12" href="{{ .Params.link }}"
