--- a/layouts/partials/sidebar.html
+++ b/layouts/partials/sidebar.html
@@ -1,36 +1,39 @@
 <!-- Sidebar -->
 <div class="sidebar">
+  <div class="sidebar-inner">
   <div class="container {{ with .Site.Params.sidebarSticky }}sidebar-sticky{{ end }}">
     <div class="sidebar-about">
-      <span class="site__title">
-        <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
-      </span>
       {{ if and (isset .Site.Params "authorimage") (not (isset .Site.Params.social "gravatar")) }}
         {{ with .Site.Params.authorimage }}
         {{ $strippedSlash := ($.Site.Params.authorimage | replaceRE "^(/)+(.*)" "$2") }}
         {{ $authorImage := (printf "%s%s" $.Site.BaseURL $strippedSlash) }}
         <div class="author-image">
-          <img src="{{$authorImage}}" alt="Author Image" class="img--circle img--headshot element--center">
+            <a href="{{ $.Site.BaseURL }}"><img src="{{$authorImage}}" alt="Author Image" class="element--center"></a>
         </div>
         {{ end }}
       {{ end }}
       {{ with .Site.Params.social.gravatar}}
         <div class="author-image">
-          <img src="https://www.gravatar.com/avatar/{{md5 .}}?s=240&d=mp" class="img--circle img--headshot element--center" alt="gravatar">
+            <a href="{{ $.Site.BaseURL }}"><img src="https://www.gravatar.com/avatar/{{md5 .}}?s=240&d=mp" class="img--circle img--headshot element--center" alt="gravatar"></a>
         </div>
       {{ end }}
+      <!-- <span class="site__title">
+        <a href="{{ .Site.BaseURL }}">{{ .Site.Title }}</a>
+      </span> -->
       <p class="site__description">
         {{ with .Site.Params.description }} {{.}} {{end}}
       </p>
     </div>
-    <div class="collapsible-menu">
-      <input type="checkbox" id="menuToggle">
-      <label for="menuToggle">{{ .Site.Title }}</label>
-      <div class="menu-content">
-        {{ partial "sidebar/menu.html" . }}
-        {{ partial "sidebar/social.html" . }}
+    <div>
+      <div class="collapsible-menu">
+        <input type="checkbox" id="menuToggle">
+        <label for="menuToggle">{{ .Site.Title }}</label>
+        <div class="menu-content">
+          {{ partial "sidebar/menu.html" . }}
+          {{ partial "sidebar/social.html" . }}
+        </div>
       </div>
     </div>
-    {{ partial "sidebar/copyright.html" . }}
+  </div>
   </div>
 </div>
